Removed double attachments from single-view. Couple of minor style fixes for pdf attachment-list and columns text-overflow.

--- a/municipalityinitiative-web/src/main/webapp/css/less-imports/attachments.less
+++ b/municipalityinitiative-web/src/main/webapp/css/less-imports/attachments.less
@@ -38,11 +38,15 @@
 .pdf-attachment {
 	margin-bottom: 1em;
 	
+	a {
+		margin-right: 0.5em;
+	}
+	
 	img {
 		vertical-align: bottom;
 	}
 	.pdf-label {
-		margin:0 0.5em;
+		margin-left: 0.5em;
 	}
 }
 
