--- a/municipalityinitiative-web/src/main/webapp/css/less-imports/columns.less
+++ b/municipalityinitiative-web/src/main/webapp/css/less-imports/columns.less
@@ -188,6 +188,7 @@
     width: 32%;
     margin-right: 2%;
     float: left;
+    word-wrap: break-word;
 
     .role-input-area {
         border: 1px solid @borderGray;
